--- a/views/index.liquid
+++ b/views/index.liquid
@@ -5,7 +5,7 @@
   
     <div class="content">
 <div class="card">
-  <img src="Squad1H-Rick.jpg" alt="Rick Pijnacker" width="100" height="100">
+  <img src="Squad1H-Rick-modified.png" alt="Rick Pijnacker" width="100" height="100">
   
   <div class="name">
   <h2>{{ person.name }}</h2>
