nieuwe htm l geschreven en wat css toegevoegd

--- a/views/index.liquid
+++ b/views/index.liquid
@@ -1,37 +1,22 @@
 {% render 'partials/head.liquid' %}
 
+<section class="profile-card">
+  <img src="Squad1H-Rick-modified.png">
+  <h1>{{person.name}}</h1>
+  <p>Frontend Design & Development</p>
 
-  
-  
-    <div class="content">
-<div class="card">
-  <img src="Squad1H-Rick-modified.png" alt="Rick Pijnacker" width="100" height="100">
-  
-  <div class="name">
-  <h2>{{ person.name }}</h2>
-</div>
-
-  <p>
-    Ik ben een creative, rekenkundige, en oplossingsgerichte frontend developer met een passie voor voetbal en darten.
-
-    <div class="card-about">
-      <div class="item">
-         <span class="value">22</span>
-         <span class="label">Leeftijd</span>
-      </div>
-      <div class="item">
-         <span class="value">Anna Paulowna</span>
-         <span class="label">Woonplaats</span>
-      </div>
-      <div class="item">
-         <span class="value">Frontend Developer</span>
-         <span class="label">Beroep</span>
-      </div>
-   </div>
-   <button type="button">Meer info</button>
-
+  <div class="contact">
+    <svg></svg><p>+31 614772210</p>
+    <svg></svg><p>rick.pijnacker@hva.nl</p>
+    <svg></svg><a href="https://rickfdnd.github.io/i-love-web/"></a>
+    <svg></svg><p>Anna Paulowna</p>
   </div>
-</div>
-<svg viewBox="0 0 208 278"></svg>
+
+  <div class=socials>
+    <a href="https://www.snapchat.com/?original_referrer=www.bing.com"></a>
+    <a href="https://www.instagram.com/"></a>
+    <a href="https://github.com/RickFDND"></a>
+  </div>
+</section>
 
 {% render 'partials/foot.liquid' %}
