--- a/public/style.css
+++ b/public/style.css
@@ -3,6 +3,14 @@ body{
     justify-content: center;
     align-items: center;
     background-image: repeating-radial-gradient(blue,magenta);
+    height: 98vh;
+    font-family: monospace;
+    p{
+        margin-block-start: 0;
+    }
+    h1{
+        margin-block-end: 0.5em;
+    }
 }
 
 section{
@@ -10,21 +18,33 @@ section{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: blue;
+    background-color: rgb(50, 50, 207, 0.7);
     color: white;
-    height: 40em;
+    height: fit-content;
+    min-height: 40em;
     max-width: 400px;
-    min-width: 350px;
+    min-width: 330px;
     border-radius: 3em;
+    border: ridge 7px blueviolet;
 
-    img{
+    .profile-picture{
        max-width: 100px;
        height: auto;
     }
 
-    svg{
+    .contact{
+        display: flex;
+        flex-direction: column;
+        img{
         max-width: 2.5em;
         height: 2.5em;
+        }
     }
+    .socials{
 
+        img{
+            max-width: 2.5em;
+            height: auto;
+        }
+    }
 }
