kaartje netjes layout gefixt en gedesgined closed #2

--- a/public/style.css
+++ b/public/style.css
@@ -1,49 +1,72 @@
-body{
+body {
     display: flex;
     justify-content: center;
     align-items: center;
     background-image: repeating-radial-gradient(rgb(255, 255, 255),rgb(0, 0, 0));
     height: 98vh;
     font-family: monospace;
-    p{
+
+    p {
         margin-block-start: 0;
     }
-    h1{
+
+    h1 {
         margin-block-end: 0.5em;
     }
 }
 
-section{
+section {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgb(50, 50, 207, 0.7);
+    background: linear-gradient(120deg, #0f247a 25.5%, blueviolet 70%);
+    background-repeat: no-repeat;
     color: white;
     height: fit-content;
     min-height: 40em;
     max-width: 400px;
     min-width: 330px;
     border-radius: 3em;
-    border: solid 7px blueviolet;
+    border: solid 7px rgb(138, 43, 226);
 
-    .profile-picture{
+    .profile-picture {
        max-width: 100px;
        height: auto;
+       border: solid 5px rgb(138, 43, 226);
+       border-radius: 60px;
     }
 
-    .contact{
-        display: flex;
-        flex-direction: column;
-        img{
+    .contact {
+        display: grid;
+        justify-content: center;
+        align-items: center;
+        grid-template-rows: repeat(4, 1fr);
+        grid-template-columns: 0.8fr 4fr;
+        max-width: 260px;
+        margin-left: 3em;
+        padding-top: 1em;
+
+        p, a{
+            margin-top: 1em;
+            color: white;
+        }
+        img {
         max-width: 2.5em;
         height: 2.5em;
+        mix-blend-mode: multiply;
         }
     }
-    .socials{
-
-        img{
-            max-width: 2.5em;
+    .socials {
+        margin-top: 2em;
+        a{
+            padding-top: 21.36px;
+        }
+        img:hover{
+            transform: scale(1.2);
+        }
+        img {
+            max-width: 5em;
             height: auto;
         }
     }
