--- a/views/index.liquid
+++ b/views/index.liquid
@@ -6,15 +6,13 @@
   <p>Frontend Design & Development</p>
 
   <div class="contact">
-    <img src="whatsapp-logo.png"><p>+31 614772210</p>
-    <img src="email-logo.webp"><p>rick.pijnacker@hva.nl</p>
-    <a href="{{ person.website }}">https://rickfdnd.github.io/i-love-web/</a>
-    <p>Anna Paulowna</p>
+    <img src="telefoonlogo.jpg"><p>+31 614772210</p>
+    <img src="emaillogo.jpg"><p>rick.pijnacker@hva.nl</p>
+    <img src="website-logo.jpg"><a href="{{ person.website }}">https://rickfdnd.github.io/i-love-web/</a>
+    <img src="locatie-logo.jpg"><p>Anna Paulowna</p>
   </div>
 
   <div class=socials>
-    <a href="https://www.snapchat.com/?original_referrer=www.bing.com"></a>
-    <a href="https://www.instagram.com/"></a>
     <a href="https://github.com/RickFDND"><img src="github-logo.png"></a>
   </div>
 </section>
