woonplaats met json #1 ties

--- a/views/index.liquid
+++ b/views/index.liquid
@@ -8,8 +8,8 @@
   <div class="contact">
     <img src="telefoonlogo.jpg"><p>+31 614772210</p>
     <img src="emaillogo.jpg"><p>rick.pijnacker@hva.nl</p>
-    <img src="website-logo.jpg"><a href="{{ person.website }}">https://rickfdnd.github.io/i-love-web/</a>
-    <img src="locatie-logo.jpg"><p>Anna Paulowna</p>
+    <img src="website-logo.jpg"><a href="{{ person.website }} target="_blank" >https://rickfdnd.github.io/i-love-web/</a>
+    <img src="locatie-logo.jpg"><p>{{ person.custom.Woonplaats }}</p>
   </div>
 
   <div class=socials>
